Update to latest MidnightConfig and MidnightLib